<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="26dp"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="715dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="158dp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="32dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="132dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="650dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="133dp"
        android:layout_height="36dp"
        android:text="@string/COURSE"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="100dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="32dp"
        android:text="@string/YEAR"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="364dp"
        android:layout_height="169dp"
        android:text="@string/DESCRIPTION"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="249dp" />
</androidx.constraintlayout.widget.ConstraintLayout>